--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </div>
 
                 <div class="idiot_get_bug discounter"><div class="five  counter">
-                    <img src="../img/Woman_9.jpg">
+                    <img src="../img/Woman_8.jpg">
                     <button class="butOne">Quick view</button><button class="butTwo">More details</button>
                 </div>
                 <p class="bacis">Excepteur sint occaecat cupidatat</p>
@@ -206,6 +206,18 @@
 
         <div class="instagram">
             <p>#Instagram</p>
+        </div>
+
+        <div class="map">
+            <div class="mapDes">
+                <div class="mapInfo">
+                    <p>Alterego, 1 Infinite Loop, Cupertino,
+                        CA 95014</p>
+                    <p>8 - 800 - 2000 - 3000</p>
+                    <p>demo@demo.com</p>
+                    <p>Mon. - Sun: 09:00 - 19:00</p>
+                </div>
+            </div>
         </div>
     </main>
 
