--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </div>
 
                 <div class="idiot_get_bug discounter"><div class="five  counter">
-                    <img src="../img/Woman_8.jpg">
+                    <img src="../img/Woman_9.jpg">
                     <button class="butOne">Quick view</button><button class="butTwo">More details</button>
                 </div>
                 <p class="bacis">Excepteur sint occaecat cupidatat</p>
@@ -222,7 +222,62 @@
     </main>
 
     <footer>
+        <div class="main__fotter">
+            <div class="input__social">
+                <h2>A<span>&#8226;</span>R<span>&#8226;</span>C<span>&#8226;</span>A<span>&#8226;</span>N<span>&#8226;</span>A</h2>
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                <div class="sprite__social">
+                    <div><a href="https://www.facebook.com/profile.php?id=100040032070816" target="_blank"><span class="s-1 icon"></span></a></div>
+                    <div><a href="https://www.instagram.com/lyaska_konstantin/" target="_blank"><span class="s-2 icon"></span></a></div>
+                    <div><a href="https://www.facebook.com/profile.php?id=100040032070816" target="_blank"><span class="s-3 icon"></span></a></div>
+                    <div><a href="https://www.facebook.com/profile.php?id=100040032070816" target="_blank"><span class="s-4 icon"></span></a></div>
+                </div>
+                <div class="input__form">
+                    <input type="text" placeholder="Enter your e-mail" class="email-text">
+                    <input type="submit" value="SUBSCRIBE" class="sumbit">
+                </div>
+                
+            </div>
+            <div class="infograph">
+                <div class="products">
+                    <P>Products</P>
+                    <ul>
+                        <li>Prices drop</li>
+                        <li>New products</li>
+                        <li>Best sales</li>
+                    </ul>
+                </div>
+                <div class="information">
+                    <p>Information</p>
+                    <ul>
+                        <li>Delivery</li>
+                        <li>Legal Notice</li>
+                        <li>Terms and conditions of use</li>
+                        <li>About us</li>
+                        <li>Secure payment</li>
+                        <li>Contact us</li>
+                        <li>Sitemap</li>
+                        <li>Stores</li>
+                    </ul>
+                </div>
+                <div class="your__acc">
+                    <p>Your account</p>
+                    <ul>
+                        <li>Addresses</li>
+                        <li>Credit slips</li>
+                        <li>Orders</li>
+                        <li>Personal info</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
+        <section class="payments">
+            <picture>
+                <source srcset="img/pay_method.png">
+                <img srcset="img/pay_method.png" alt="Payment methods">
+            </picture>
+        </section>
     </footer>
 </body>
 </html>
