img path changed

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <section class="catalog">
                 <div class="idiot_get_bug new">
                     <div class="one  counter">
-                        <img src="../img/Woman_5.jpg">
+                        <img src="img/Woman_5.jpg">
                     <button class="butOne">Quick view</button><button class="butTwo">More details</button>
                     </div>
                     <p class="bacis">Excepteur sint occaecat cupidatat</p>
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="idiot_get_bug"><div class="two counter">
-                    <img src="../img/Woman_6.jpg">
+                    <img src="img/Woman_6.jpg">
                     <button class="butOne">Quick view</button><button class="butTwo">More details</button>
                 </div>
                 <p class="bacis">Excepteur sint occaecat cupidatat</p>
@@ -119,7 +119,7 @@
                 </div>
 
                 <div class="idiot_get_bug discounter new"><div class="three  counter">
-                    <img src="../img/Woman_7.jpg">
+                    <img src="img/Woman_7.jpg">
                     <button class="butOne">Quick view</button><button class="butTwo">More details</button>
                 </div>
                 <p class="bacis">Excepteur sint occaecat cupidatat</p>
@@ -127,7 +127,7 @@
                 </div>
 
                 <div class="idiot_get_bug"><div class="four counter">
-                    <img src="../img/T-shirt.jpg">
+                    <img src="img/T-shirt.jpg">
                     <button class="butOne">Quick view</button><button class="butTwo">More details</button>
                 </div>
                 <p class="bacis">Excepteur sint occaecat cupidatat</p>
@@ -135,7 +135,7 @@
                 </div>
 
                 <div class="idiot_get_bug discounter"><div class="five  counter">
-                    <img src="../img/Woman_9.jpg">
+                    <img src="img/Woman_9.jpg">
                     <button class="butOne">Quick view</button><button class="butTwo">More details</button>
                 </div>
                 <p class="bacis">Excepteur sint occaecat cupidatat</p>
@@ -143,7 +143,7 @@
                 </div>
 
                 <div class="idiot_get_bug discounter"><div class="six  counter">
-                    <img src="../img/Woman_10.jpg">
+                    <img src="img/Woman_10.jpg">
                     <button class="butOne">Quick view</button><button class="butTwo">More details</button>
                 </div>
                 <p class="bacis">Excepteur sint occaecat cupidatat</p>
@@ -151,7 +151,7 @@
                 </div>
 
                 <div class="idiot_get_bug"><div class="seven counter">
-                    <img src="../img/Woman_11.jpg">
+                    <img src="img/Woman_11.jpg">
                     <button class="butOne">Quick view</button><button class="butTwo">More details</button>
                 </div>
                 <p class="bacis">Excepteur sint occaecat cupidatat</p>
@@ -159,7 +159,7 @@
                 </div>
 
                 <div class="idiot_get_bug"><div class="eight counter">
-                    <img src="../img/Woman_12.jpg">
+                    <img src="img/Woman_12.jpg">
                     <button class="butOne">Quick view</button><button class="butTwo">More details</button>
                 </div>
                 <p class="bacis">Excepteur sint occaecat cupidatat</p>
@@ -167,7 +167,7 @@
                 </div>
 
                 <div class="idiot_get_bug discounter"><div class="nine  counter">
-                    <img src="../img/Woman_13.jpg">
+                    <img src="img/Woman_13.jpg">
                     <button class="butOne">Quick view</button><button class="butTwo">More details</button>
                 </div>
                 <p class="bacis">Excepteur sint occaecat cupidatat</p>
@@ -175,7 +175,7 @@
                 </div>
 
                 <div class="idiot_get_bug"><div class="ten counter">
-                    <img src="../img/Woman_14.jpg">
+                    <img src="img/Woman_14.jpg">
                     <button class="butOne">Quick view</button><button class="butTwo">More details</button>
                 </div>
                 <p class="bacis">Excepteur sint occaecat cupidatat</p>
